// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Banner UI snapshots renders error type and text 1`] = `
.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
}

.emotion-6 {
  background: transparent;
  border: none;
  width: 100%;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 1rem;
  border-radius: 0.5rem;
  background-color: #BD200F;
  box-shadow: 0px 8px 24px rgba(189,32,15,0.05);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

@media (min-width:768px) {
  .emotion-6 {
    margin: 0 auto 1rem;
  }
}

<button
  className="emotion-6 emotion-7"
  tabIndex={-1}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Error banner
    </div>
  </div>
</button>
`;

exports[`Banner UI snapshots renders info type and text 1`] = `
.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
}

.emotion-6 {
  background: transparent;
  border: none;
  width: 100%;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 1rem;
  border-radius: 0.5rem;
  background-color: #332e54;
  box-shadow: 0px 8px 24px rgba(51,46,84,0.05);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

@media (min-width:768px) {
  .emotion-6 {
    margin: 0 auto 1rem;
  }
}

<button
  className="emotion-6 emotion-7"
  tabIndex={-1}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Default banner
    </div>
  </div>
</button>
`;

exports[`Banner UI snapshots renders success type and text 1`] = `
.emotion-6 {
  background: transparent;
  border: none;
  width: 100%;
  cursor: pointer;
  position: relative;
  margin: 0 auto 0.5rem;
  padding: 1rem;
  border-radius: 0.5rem;
  background-color: #2B6E33;
  box-shadow: 0px 8px 24px rgba(43,110,51,0.05);
}

.emotion-6:focus {
  outline: none;
  box-shadow: 0px 0px 0px 2px #ffffff,0px 0px 0px 4px #332e54;
}

@media (min-width:768px) {
  .emotion-6 {
    margin: 0 auto 1rem;
  }
}

.emotion-4 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: row nowrap;
  -ms-flex-flow: row nowrap;
  flex-flow: row nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  color: #ffffff;
  font-size: 0.875rem;
}

.emotion-0 svg {
  height: 1rem;
  width: 1rem;
  fill: #ffffff;
}

.emotion-2 {
  margin: -3px 0 0 1rem;
}

<button
  className="emotion-6 emotion-7"
  tabIndex={-1}
>
  <div
    className="emotion-4 emotion-5"
  >
    <div
      className="emotion-0 emotion-1"
    >
      <svg
        fill="#ffffff"
      />
    </div>
    <div
      className="emotion-2 emotion-3"
    >
      Success Banner
    </div>
  </div>
</button>
`;
